# auxein

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
auxein/: __init__.py
auxein/fitness/: __init__.py  core.py  kernel_based.py  linear.py  observation_based.py
auxein/fitness/utils/: __init__.py  utils.py
auxein/mutations/: __init__.py  core.py
auxein/parents/: __init__.py
auxein/parents/distributions/: __init__.py  core.py
auxein/parents/selections/: __init__.py  core.py
auxein/playgrounds/: __init__.py  static.py
auxein/population/: __init__.py  core.py  dna_builders.py  genotype.py  individual.py
auxein/recombinations/: __init__.py  core.py  simple_arithmetic.py
auxein/replacements/: __init__.py  core.py  replace_worst.py
examples/: testbed.py
notebooks/: linear_regression.ipynb  logistic_regression.ipynb  polynomial_regression.ipynb  rastrigin.ipynb
tests/: distributions_test.py  dna_builders_test.py  mutations_test.py  population_test.py  recombinations_test.py  replacements_test.py  selections_test.py
tests/fitness/: fitness_test.py  kernel_fitness_test.py  observation_fitness_test.py  utils_test.py
